Bump plugins and libs, minor updates